@@ -24,14 +24,14 @@
 #include <cmath>
 
 // Velocity at which a slide is considered to be done
-#define SLIDE_FINAL_VELOCITY 1.0
+#define SLIDE_FINAL_VELOCITY 1
 
 PagedPanning::PagedPanning(QObject* parent) : MPhysics2DPanning(parent),
                                               pageCount_(1),
                                               currentPage(0),
                                               snapMode(false),
                                               previousRange(),
-                                              velocityThreshold_(7.0),
+                                              velocityThreshold_(7),
                                               panThreshold(30),
                                               dragThreshold_(0.5),
                                               slideLimit_(0),
@@ -41,7 +41,8 @@ PagedPanning::PagedPanning(QObject* parent) : MPhysics2DPanning(parent),
                                               targetPage_(0),
                                               initialPage(0),
                                               previousPageWidth(0),
-                                              latestSwipeLength(0),
+                                              distanceToPressPosition(0),
+                                              initialTargetPageVelocityThreshold(0),
                                               wrapMode(false),
                                               pageWrapping(false)
 {
@@ -53,7 +54,6 @@ PagedPanning::PagedPanning(QObject* parent) : MPhysics2DPanning(parent),
 
 PagedPanning::~PagedPanning()
 {
-
 }
 
 // Wraps x into the range [0,length)
@@ -66,12 +66,7 @@ static int wrap(int x, int length)
     return x;
 }
 
-void PagedPanning::integrateAxis(Qt::Orientation orientation,
-                                 qreal &position,
-                                 qreal &velocity,
-                                 qreal &acceleration,
-                                 qreal &pointerDifference,
-                                 bool pointerPressed)
+void PagedPanning::integrateAxis(Qt::Orientation orientation, qreal &position, qreal &velocity, qreal &acceleration, qreal &pointerDifference, bool pointerPressed)
 {
     if (orientation == Qt::Vertical) {
         return;
@@ -81,8 +76,7 @@ void PagedPanning::integrateAxis(Qt::Orientation orientation,
         snapMode = true;
     }
 
-    qreal force = 0.0;
-
+    qreal force = 0;
     qreal currentPageWidth = pageWidth();
 
     if ((position >= range().left() && position <= range().right()) || wrapMode) {
@@ -124,27 +118,24 @@ void PagedPanning::integrateAxis(Qt::Orientation orientation,
         targetPage_ = qBound(0, targetPage_, pageCount_-1);
 
         int nearestPage = 0;
-
         if (currentPageWidth > 0) {
             nearestPage = (int)((position / (qreal)currentPageWidth) + 0.5);
             // nearestPage is the nearest page in the valid range
             nearestPage = qBound(0, nearestPage, pageCount_-1);
         }
 
-        // Cap the nearestPage at targetPage, in case
-        // we slide past the target
-        if (initialPage < targetPage_)
+        // Cap the nearestPage at targetPage, in case we slide past the target
+        if (initialPage < targetPage_) {
             nearestPage = qMin(nearestPage, targetPage_);
-        else
+        } else {
             nearestPage = qMax(targetPage_, nearestPage);
+        }
 
         // Emit the signal only when really necessary.
         // The user might have dragged the view over the threshold
         // in which case the page has changed, but nearestPage could
         // still be initialPage.
-        if (    nearestPage  != currentPage
-             && currentPage != targetPage_
-             && nearestPage  != initialPage ) {
+        if (nearestPage  != currentPage && currentPage != targetPage_ && nearestPage  != initialPage ) {
             emit pageChanged(nearestPage);
             currentPage = nearestPage;
         }
@@ -155,7 +146,6 @@ void PagedPanning::integrateAxis(Qt::Orientation orientation,
         }
 
         if (snapMode) {
-
             force += pageSnapSpringK_ * (targetPage_ * (qreal)currentPageWidth - position);
 
             qreal closeEnough = position - (currentPageWidth * targetPage_);
@@ -178,17 +168,17 @@ void PagedPanning::integrateAxis(Qt::Orientation orientation,
         }
     }
 
-    acceleration   = force;
-    velocity      += acceleration;
-    position      += velocity;
+    acceleration = force;
+    velocity += acceleration;
+    position += velocity;
     pointerDifference += velocity;
 
     previousPosition = position;
     previousPageWidth = currentPageWidth;
 
-    if (snapMode && std::fabs(velocity) < 1.0f) {
+    if (snapMode && std::fabs(velocity) < 1) {
         // Keep the velocity over 1 or under -1 to keep the animation going
-        velocity = velocity < 0.0f ? -1.0f : 1.0f;
+        velocity = velocity < 0.0f ? -1 : 1;
     }
 }
 
@@ -216,7 +206,7 @@ void PagedPanning::panToPage(int page)
 
 void PagedPanning::panToCurrentPage()
 {
-    if (std::fabs(previousPosition - currentPage * pageWidth()) > 1.0) {
+    if (std::fabs(previousPosition - currentPage * pageWidth()) > 1) {
         targetPage_ = currentPage;
         snapMode = true;
         start();
@@ -236,7 +226,7 @@ void PagedPanning::setPanThreshold(qreal value)
 
 void PagedPanning::setDragThreshold(qreal value)
 {
-    dragThreshold_ = qBound((qreal)0.0, (qreal)std::fabs(value), (qreal)1.0);
+    dragThreshold_ = qBound((qreal)0, (qreal)std::fabs(value), (qreal)1);
 }
 
 void PagedPanning::setSlideLimit(int value)
@@ -288,14 +278,15 @@ qreal PagedPanning::slideDistance(qreal initialVelocity, qreal friction)
        log(finalVelocity/initialVelocity) = t*log((1-friction))
                                         t = log(finalVelocity/initialVelocity)/log(1-friction)
      */
-    if (initialVelocity == 0)
+    if (initialVelocity == 0) {
         return 0;
+    }
 
-    qreal b = 1.0 - qMin((qreal)1.0, friction);
+    qreal b = 1 - qMin((qreal)1, friction);
     qreal logb = std::log(b);
     qreal t = std::log(SLIDE_FINAL_VELOCITY / std::fabs(initialVelocity)) / logb;
 
-    return initialVelocity * (std::pow(b, t)-1.0) / logb;
+    return initialVelocity * (std::pow(b, t) - 1) / logb;
 }
 
 void PagedPanning::pointerPress(const QPointF &pos)
@@ -307,11 +298,11 @@ void PagedPanning::pointerPress(const QPointF &pos)
     MPhysics2DPanning::pointerPress(pos);
 
     initialPage = currentPage;
-    pointerPressPosition = pos;
+    pressPosition = pos;
+    initialTargetPageVelocityThreshold = 0;
 
     // Stop the automatic panning when the pointer comes down
     snapMode = false;
-
     pageWrapping = false;
 
     emit pageIsPanning(true);
@@ -324,24 +315,14 @@ void PagedPanning::pointerMove(const QPointF &pos)
     }
 
     MPhysics2DPanning::pointerMove(pos);
-    /* Target the next page if the view has been dragged over the
-       dragThreshold. */
 
-    qreal distanceToInitialPage = pointerPressPosition.x() - pos.x();
+    distanceToPressPosition = pressPosition.x() - pos.x();
 
-    latestSwipeLength = distanceToInitialPage;
+    // Target the next page if the view has been dragged over the dragThreshold
+    qreal pageChange = distanceToPressPosition > 0 ? (1 - dragThreshold_) : (-1 + dragThreshold_);
+    targetPage_ = initialPage + (int)(distanceToPressPosition / pageWidth() + pageChange);
 
-    int draggedPages;
-
-    if (distanceToInitialPage > 0) {
-        draggedPages = (int)(distanceToInitialPage / pageWidth() + (1.0 - dragThreshold_));
-    } else {
-        draggedPages = (int)(distanceToInitialPage / pageWidth() - (1.0 - dragThreshold_));
-    }
-
-    targetPage_ = initialPage + draggedPages;
-
-    if(wrapMode) {
+    if (wrapMode) {
         int wrappedPage = wrap(targetPage_, pageCount_);
         pageWrapping = targetPage_ != wrappedPage;
         targetPage_ = wrappedPage;
@@ -349,20 +330,14 @@ void PagedPanning::pointerMove(const QPointF &pos)
         targetPage_ = qBound(0, targetPage_, pageCount_ - 1);
     }
 
-    if(currentPage != targetPage_) {
+    // Store the velocity threshold needed to get to the page which was targeted after the pan threshold was first exceeded
+    if (initialTargetPageVelocityThreshold == 0 && std::fabs(distanceToPressPosition) > panThreshold) {
+        initialTargetPageVelocityThreshold = distanceToPressPosition > 0 ? velocityThreshold_ : -velocityThreshold_;
+    }
+
+    if (currentPage != targetPage_) {
         emit pageChanged(targetPage_);
         currentPage = targetPage_;
-    }
-}
-
-void PagedPanning::goToNextPageWithStrongEnoughFlick()
-{
-    /* Pan to the next page if a strong enough flick was performed and pan threshold is exceeded. */
-    if (targetPage_ == initialPage
-        && std::fabs(velocity().x()) > velocityThreshold_
-        && std::fabs(latestSwipeLength) > panThreshold) {
-        targetPage_ += velocity().x() > 0 ? 1 : -1;
-        snapMode = true;
     }
 }
 
@@ -373,23 +348,39 @@ void PagedPanning::pointerRelease()
     }
 
     MPhysics2DPanning::pointerRelease();
-    // The number of pages to slide
-    qreal slidePages = slideDistance(velocity().x(), slidingFriction()) / pageWidth();
-    // Remove half a page; only slide over the center of a page if really going
-    // to the next one
-    slidePages -= slidePages > 0 ? 0.5 : -0.5;
 
-    targetPage_ = currentPage + (int)slidePages;
+    if (std::fabs(distanceToPressPosition) > panThreshold) {
+        // Movement exceeds panning threshold: check whether the current velocity is to the initial target page's direction
+        if ((initialTargetPageVelocityThreshold > 0 && velocity().x() >= initialTargetPageVelocityThreshold) || (initialTargetPageVelocityThreshold < 0 && velocity().x() <= initialTargetPageVelocityThreshold)) {
+            // Current velocity is to the correct direction and over velocity limit: Calculate the target page based on the current velocity
+            qreal slidePages = slideDistance(velocity().x(), slidingFriction()) / pageWidth();
+            // Remove half a page; only slide over the center of a page if really going to the next one
+            slidePages -= slidePages > 0 ? 0.5 : -0.5;
+            targetPage_ = currentPage + (int) slidePages;
 
-    goToNextPageWithStrongEnoughFlick();
+            if (targetPage_ == initialPage) {
+                // If the velocity was not enough to switch between pages, still pan at least one page
+                targetPage_ += velocity().x() > 0 ? 1 : -1;
+                snapMode = true;
+            }
+        } else if ((initialTargetPageVelocityThreshold > 0 && velocity().x() < 0) || (initialTargetPageVelocityThreshold < 0 && velocity().x() > 0) || std::fabs(distanceToPressPosition) / pageWidth() < dragThreshold_) {
+            // Velocity was to the wrong direction away from the initial target page or movement didn't exceed the drag threshold: return to the initial page, wrapping if necessary
+            if (currentPage == pageCount_ - 1 && initialPage == 0) {
+                setPosition(QPointF(position().x() + pageWidth() * pageCount() , position().y()));
+            } else if (currentPage == 0 && initialPage == pageCount_ - 1) {
+                setPosition(QPointF(position().x() - pageWidth() * pageCount() , position().y()));
+            }
 
-    if (slideLimit_ > 0) {
-        targetPage_ = qBound(currentPage - slideLimit_,
-                             targetPage_,
-                             currentPage + slideLimit_);
+            targetPage_ = initialPage;
+            initialPage = currentPage;
+        }
     }
 
-    // if wrapmode is on, and the pointer movement or the above logic caused page wrapping,
+    if (slideLimit_ > 0) {
+        targetPage_ = qBound(currentPage - slideLimit_, targetPage_, currentPage + slideLimit_);
+    }
+
+    // If wrap mode is on, and the pointer movement or the above logic caused page wrapping,
     // move the current position to the opposite side of the pannable area
     if(wrapMode && (pageWrapping || targetPage_ >= pageCount_ || targetPage_ < 0)) {
         targetPage_ = wrap(targetPage_, pageCount_);
@@ -401,12 +392,12 @@ void PagedPanning::pointerRelease()
 
 void PagedPanning::setPage(uint page)
 {
-    if(page >= uint(pageCount())) {
+    if (page >= uint(pageCount())) {
         return;
     }
 
     currentPage = page;
-    targetPage_  = page;
+    targetPage_ = page;
     snapMode = true;
     setPosition(QPointF(pageWidth() * page, 0));
     emit pageChanged(page);
